<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_login">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/title_let_s_start"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_shopping"
            android:textColor="@color/unselect"
            android:textSize="25sp"
            android:textStyle="bold" />



        <!--        <ImageView-->
        <!--            android:layout_width="200dp"-->
        <!--            android:layout_height="200dp"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_marginEnd="-20dp"-->
        <!--            android:rotation="-20"-->
        <!--            android:alpha="0.5"-->
        <!--            android:src="@drawable/img_fashion_3" />-->

        <ImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-50dp"
            android:alpha="0.6"
            android:src="@drawable/img_fashion_1" />


    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_layout_design"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/circular_rectangle_design_white_1"
                    android:hint="@string/title_full_name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey_1"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/et_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/circular_rectangle_design_white_1"
                    android:hint="@string/title_phone_number"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey_1"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/circular_rectangle_design_white_1"
                    android:hint="@string/title_email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey_1"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/circular_rectangle_design_white_1"
                    android:hint="@string/title_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey_1"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/circular_rectangle_design_primary_color"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_already_have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/title_sign_in"
                    android:textColor="@color/primary_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>