<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_layout_design"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Dashboard.DashboardFragments.CartFragment">

    <TextView
        android:id="@+id/tv_empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_your_cart_is_empty"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:visibility="gone"
        android:textColor="@color/light_grey_1"/>

    <RelativeLayout
        android:id="@+id/rl_back_and_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp">

        <!--        <RelativeLayout-->
        <!--            android:id="@+id/rl_back_arrow"-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_marginStart="25dp"-->
        <!--            android:background="@drawable/circular_design_grey">-->

        <!--            <ImageView-->
        <!--                android:layout_width="25dp"-->
        <!--                android:layout_height="25dp"-->
        <!--                android:layout_centerInParent="true"-->
        <!--                android:src="@drawable/ic_back" />-->

        <!--        </RelativeLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_my_cart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_checkout"
        android:layout_below="@+id/rl_back_and_title"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cartCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/light_grey_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:visibility="gone"
        android:id="@+id/ll_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_sub_total"
                android:textColor="@color/light_grey_1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="$209.85"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_shipping"
                android:textColor="@color/light_grey_1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_shipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="$5.00"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layerType="software"
            android:src="@drawable/dotted_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_bag_total"
                android:textColor="@color/light_grey_1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="$214.85"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circular_rectangle_design_primary_color"
            android:text="@string/title_checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>





</RelativeLayout>