<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fragment_layout_design"
    tools:context=".Dashboard.DashboardFragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.7">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_fullName"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/img_user_dp"
                    app:civ_border_color="@color/unselect"
                    app:civ_border_width="1dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_about"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/white"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_weight="0.3"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circular_design_grey">

                        <ImageView
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_info" />

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_about"
                    android:textColor="@color/unselect"
                    android:textSize="16sp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_weight="1.7"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_rt_arrow"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_send_feedback"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/white"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_weight="0.3"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circular_design_grey">

                        <ImageView
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_send_feedback" />

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_send_feedback"
                    android:textColor="@color/unselect"
                    android:textSize="16sp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_weight="1.7"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_rt_arrow"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rating"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/white"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_weight="0.3"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circular_design_grey">

                        <ImageView
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_rating" />

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_rate_us_on_playstore"
                    android:textColor="@color/unselect"
                    android:textSize="16sp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_weight="1.7"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_rt_arrow"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circular_design_grey">

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_logout" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_log_out"
                android:textColor="@color/unselect"
                android:textSize="16sp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>